<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/water_plants"
    android:theme="@style/FishingQuiz"
    tools:context="com.example.android.fishingquizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/question1"
                android:textSize="25sp" />


            <RadioGroup
                android:id="@+id/question1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/q1_answer1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/pike"
                    android:gravity="bottom" />

                <RadioButton
                    android:id="@+id/q1_answer2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/zander"
                    android:gravity="bottom" />

                <RadioButton
                    android:id="@+id/q1_answer3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/wels_catfish"
                    android:gravity="bottom" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/question2"
                android:textSize="25sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/q2_answer1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/brown_bullhead"
                    android:gravity="bottom"
                    android:paddingTop="79dp"
                    android:text="@string/brown_bullhead" />

                <RadioButton
                    android:id="@+id/q2_answer2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/ruffe"
                    android:gravity="bottom"
                    android:text="@string/ruffe" />

                <RadioButton
                    android:id="@+id/q2_answer3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/vimba_vimba"
                    android:gravity="bottom"
                    android:text="@string/vimba_vimba" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/question3"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/european_eel" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/q3_answer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/european_eel" />

                <RadioButton
                    android:id="@+id/q3_answer2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/burbot" />

                <RadioButton
                    android:id="@+id/q3_answer3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/wels_catfish" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/question4"
                android:textSize="25sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/q4_answer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/fly_fishing" />

                <RadioButton
                    android:id="@+id/q4_answer2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/coarse_fishing" />

                <RadioButton
                    android:id="@+id/q4_answer3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/spin_fishing" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/question5"
                android:textSize="25sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/q5_answer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="10" />

                <RadioButton
                    android:id="@+id/q5_answer2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="12" />

                <RadioButton
                    android:id="@+id/q5_answer3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="8" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/question6"
                android:textSize="25sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/q6_answer1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/common_bream"
                    android:gravity="bottom"
                    android:paddingTop="79dp" />

                <RadioButton
                    android:id="@+id/q6_answer2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/common_roach"
                    android:gravity="bottom" />

                <RadioButton
                    android:id="@+id/q6_answer3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/common_rudd"
                    android:gravity="bottom"
                    android:paddingTop="79dp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/question7"
                android:textSize="25sp" />

            <CheckBox
                android:id="@+id/q7_option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/q7ToAns1"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/q7_option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/q7ToAns2"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/q7_option3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/q7ToAns3"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="25dp"
            android:background="@android:color/black"
            android:onClick="submit"
            android:scrollHorizontally="true"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            tools:ignore="OnClick" />
    </LinearLayout>
</ScrollView>